--- a/src/main/java/templates/dashboard.html
+++ b/src/main/java/templates/dashboard.html
@@ -5,6 +5,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
-    <p th:text="'Hello, moon young!'"></p>
+    <p>Hello world</p>
 </body>
 </html>
