--- a/src/main/java/templates/dashboard.html
+++ b/src/main/java/templates/dashboard.html
@@ -8,6 +8,7 @@
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="js/dragndrop_js.js"></script>
+    <script src="js/onboardings.js"></script>
 </head>
 
 <body>
@@ -45,7 +46,7 @@
 </div> -->
 
 <div class='side_bar'>
-    <div class='side_bar_title'>Navigation Bar</div><img class='save_button' src="save_icon.png"/>
+    <div class='side_bar_title'>Navigation Bar</div><img class='save_button' src="save_icon.png" onclick="saveOnboardings()"/>
     <div class='side_bar_contents'>
         <div class='onboarding_group'>
             <div class='url'><div class='name'>...html</div><div class='down_arrow'>▼</div></div>
