--- a/src/main/java/static/css/dragndrop_css.css
+++ b/src/main/java/static/css/dragndrop_css.css
@@ -249,13 +249,24 @@ body{
 }
 
 .side_bar .url{
-    width: 250px;
+     width: 250px;
+     height: 30px;
+     background-color: #ffffff;
+     margin: 0 20px 8px 30px;
+     text-align: left;
+ }
+
+.side_bar .url_text{
+    width: 150px;
     height: 30px;
-    background-color: #ffffff;
-    margin: 0 20px 8px 30px;
     text-align: left;
 }
 
+.side_bar .url_submit{
+    width: 80px;
+    height: 30px;
+    text-align: left;
+}
 .side_bar .onboarding{
     width: 250px;
     height: 30px;
