--- a/src/main/java/templates/onboarder.html
+++ b/src/main/java/templates/onboarder.html
@@ -49,7 +49,7 @@
     <div class='side_bar_title'>Navigation Bar</div><img class='save_button' src="save_icon.png" onclick="saveOnboardings()"/>
     <div class='side_bar_contents'>
         <div class='onboarding_group'>
-            <div class='url'><input type="text" class='name url_text'/><input type="submit" class='url_submit' value="url"/></div>
+            <div class='url'><input type="text" class='url_text'/><input type="submit" class='url_submit' value="url"/></div>
             <div class='new_onboarding'>+ New Onboarding Screen</div>
         </div>
     </div>
